# INFOMR_Project

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  alloc.h  auxfunctions.h  ccd.h  dbg.h  list.h  main.cpp  plot.py  polytope.h  quat.h  scene.cpp  scene.h  simplex.h  support.h  vec3.h  volInt.h
Cleaner/: CMakeLists.txt  main.cpp
cmake/: FindQHULL.cmake
include/ANN/: ANN.h
include/matplotlib/: matplotlibcpp.h  matplotlibcpp2.h  numpy_flags.py
include/pfd/: portable_file_dialogs.h
src/: CleanOff.java  EigenVectors.hpp  FeatureDatabase.hpp  Features.hpp  Histogram.hpp  Normalize.hpp  PreProcess.hpp  Tess.java  Utils.hpp  defines.h  main.cpp
src/ANN/: ANN.cpp  brute.cpp  kd_dump.cpp  kd_fix_rad_search.cpp  kd_pr_search.cpp  kd_search.cpp  kd_split.cpp  kd_tree.cpp  kd_util.cpp  kd_util.h
src/Open3D/Geometry/: BoundingVolume.cpp  BoundingVolume.h  EstimateNormals.cpp  Geometry3D.cpp  Geometry3D.h  IntersectionTest.cpp  KDTreeFlann.cpp  KDTreeFlann.h  MeshBase.cpp  MeshBase.h  PointCloud.cpp  PointCloud.h  PointCloudCluster.cpp  Qhull.cpp  Qhull.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshFactory.cpp  TriangleMeshSimplification.cpp  TriangleMeshSubdivide.cpp
src/Open3D/IO/: TriangleMeshIO.cpp  TriangleMeshIO.h
src/Open3D/IO/FileFormat/: FileOFF.cpp  FilePLY.cpp  FileSTL.cpp
src/Open3D/Utility/: Eigen.cpp  FileSystem.cpp  Helper.cpp
src/emd/: emd.cpp  emd.h
src/tsne/: tsne_main.cpp
